--- a/pom.xml
+++ b/pom.xml
@@ -72,8 +72,12 @@
             <artifactId>kryo</artifactId>
             <version>5.6.2</version>
         </dependency>
-
-
+        <!-- 支持markdown格式的文档 -->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-markdown-document-reader</artifactId>
+            <version>1.0.0-M6</version>
+        </dependency>
 
         <dependency>
             <groupId>cn.hutool</groupId>
